[package]
name = "hello_axum"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utoipa = { version = "3.0.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["axum"] }
tower = "0.4.13"
tower-http = "0.4.3"
axum = "0.6.19"
axum-macros = "0.3.8"
axum-server = "0.5.1"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
dotenv = "0.15.0"
sqlx = { version = "0.6.3", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
    "bigdecimal",
] }
sqlx-cli = "0.7.1"
tokio = { version = "1.29.1", features = ["full"] }
