[package]
name = "hello_axum"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.23.0", features = ["tokio-comp", "connection-manager"] }
utoipa = { version = "3.0.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["axum"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ['cors', 'trace'] }
axum = "0.6.19"
axum-macros = "0.3.8"
axum-server = "0.5.1"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
dotenv = "0.15.0"
sqlx = { version = "0.6.3", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
    "bigdecimal",
] }
sqlx-cli = "0.7.1"
tokio = { version = "1.29.1", features = ["full"] }
reverse-engineered-twitter-api = "0.1.3"
bb8 = "0.8.1"
async-trait = "0.1.72"
axum-jwt-auth = "0.1.1"
jsonwebtoken = "8.3.0"
prost = "0.11.9"
tonic = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }


# for grpc
[build-dependencies]
tonic-build = "0.9.2"
