[package]
name = "hello_axum"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"

[[bin]]
name = "event"
path = "src/bin/event_filter.rs"

[[bin]]
name = "tg_bot"
path = "src/bin/tg_bot.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.23.0", features = ["tokio-comp", "connection-manager"] }
utoipa = { version = "3.0.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["axum"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ['cors', 'trace', 'fs'] }
axum = "0.6.19"
axum-macros = "0.3.8"
axum-server = "0.5.1"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
dotenv = "0.15.0"
sqlx = { version = "0.6.3", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
    "bigdecimal",
] }
sqlx-cli = "0.7.1"
tokio = { version = "1.29.1", features = ["full"] }
reverse-engineered-twitter-api = "0.1.3"
bb8 = "0.8.1"
async-trait = "0.1.72"
axum-jwt-auth = "0.1.1"
jsonwebtoken = "8.3.0"
prost = "0.11.9"
tonic = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
futures = "0.3.28"
headers = "0.3.8"
tokio-stream = "0.1.14"
ethers = { version = "2.0.8", features = [
    "abigen",
    "rustls",
    "ws",
    "ethers-solc",
] }
eyre = "0.6.8"
teloxide = { version = "0.12", features = ["macros", "ctrlc_handler"] }
log = "0.4"
pretty_env_logger = "0.5.0"
ethers-etherscan = "2.0.9"
ethers-core = "2.0.9"
ethers-solc = "2.0.9"
serial_test = "2.0.0"
openai_dive = { version = "0.2.13", features = [
    "stream",
    "rustls-tls",
    "simple",
] }
lazy_static = "1.4.0"
libsqlite3-sys = "0.26.0"


# for grpc
[build-dependencies]
tonic-build = "0.9.2"
